# django-ninja-auth

./: pyproject.toml
tests/: test_api.py
tests/templates/registration/: password_reset_email.html
tests/testapp/: apps.py  settings.py  urls.py
